refactor: 최근 N년에 대한 정의를 내리고, 최근 2년 간의 공휴일 데이터를 조회하는 로직과 최근 5년 간의 공휴일 데이터를 조회하는 로직을 분리하여 함수화